--- a/linked-list/index.html
+++ b/linked-list/index.html
@@ -7,13 +7,15 @@
     <title>Linked List</title>
   </head>
   <body>
-    <p>e.g., 10 -> 5 -> 16</p>
+    <p>e.g., 10 -> 6 -> 15</p>
     <pre id="root"></pre>
     <script>
       // linked list constructor (exclude empty linked list)
       class LinkedList {
         constructor(value) {
-          // create the very first linked list node
+          //  10  |  null
+          //    head
+          //    tail
           this.head = {
             value,
             next: null
@@ -21,11 +23,45 @@
           this.tail = this.head;
           this.length = 1;
         }
+
+        append(value) {
+          //  10   |   null      6   |   null
+          //     head
+          //     tail               new
+          const newNode = {
+            value,
+            next: null
+          };
+          //  10   |   ->        6   |   null
+          //     head
+          //     tail .next         new
+          this.tail.next = newNode;
+          //  10   |   ->        6   |   null
+          //     head               tail
+          //                        new
+          this.tail = newNode;
+          this.length++;
+
+          //  10   |   ->        6   |   null          15   |   null
+          //     head               tail
+          //                                               new
+
+          //  10   |   ->        6   |   ->            15   |   null
+          //     head               tail
+          //                            .next              new
+
+          //  10   |   ->        6   |   ->            15   |   null
+          //     head                                      tail
+          //                                               new
+        }
       }
 
       // create a linked list through the self-defined constructor
       let linkedList = new LinkedList(10);
+      linkedList.append(6);
+      linkedList.append(15);
 
+      console.log(linkedList);
       document.querySelector("#root").innerHTML = JSON.stringify(
         linkedList,
         null,
