--- a/linked-list/index.html
+++ b/linked-list/index.html
@@ -122,6 +122,41 @@
           this.length--;
         }
 
+          //  *  ->  *  ->  *  ->  *
+          //  h                    t 
+          //  1      2
+        reverse() {
+          if (!this.head.next) {
+            return this.head;
+          }
+          //  *  ->  *  ->  *  ->  *
+          //  h,t                    
+          //  1      2
+          this.tail = this.head;
+          let first = this.head;
+          let second = this.head.next;
+          while (second) {
+            //  *  ->  *  ->  *  ->  *
+            //  h,t                     
+            //  1      2      3
+            let third = second.next;
+            //  *  <-  *  ->  *  ->  *
+            //  h                    t 
+            //  1      2      3
+            second.next = first;
+            //  *  <-  *  ->  *  ->  *
+            //  h,t                   
+            //        2,1     3
+            first = second;
+            //  *  <-  *  ->  *  ->  *
+            //  h,t                    
+            //         1      3,2
+            second = third;
+          }
+          this.tail.next = null;
+          this.head = first;
+        }
+
         printList() {
           const linkedListValueArray = [];
           let currentNode = this.head;
@@ -145,6 +180,8 @@
       linkedList.insert(900, 990);
 
       linkedList.remove(0);
+
+      linkedList.reverse();
 
       document.querySelector("#ll-value").innerHTML = linkedList.printList();
       document.querySelector("#root").innerHTML = JSON.stringify(
