--- a/hash-table/index.html
+++ b/hash-table/index.html
@@ -24,11 +24,23 @@
         hash = hash % this.data.length;
         return hash;
       }
+
+      set(key, value) {
+        const address = this._hash(key);
+        if (!this.data[address]) {
+          this.data[address] = [[key, value]];
+        } else {
+          this.data[address].push([key, value]);
+        }
+      }
     }
 
     const hashTable = new HashTable(50);
-    // hashTable.set('grapes', 10000);
-    // hashTable.get('grapes');
+    hashTable.set('grapes', 10000);
+    hashTable.set('grapes', 10000);
+    // console.log(hashTable.get('grapes'));
+
+    console.log(hashTable.data);
   </script>
 </body>
 </html>
